# QuadTree-AED

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
bench/: benchmark.cpp
core/: AABB.h  BruteForce.cpp  BruteForce.h  Distribution.cpp  Distribution.h  Metrics.h  Particle.h  QuadTree.cpp  QuadTree.h  Simulation.cpp  Simulation.h  Vec2.h
data/: config.json
data/presets/: clusters.json  dense.json  uniform.json
include/benchmark/: Benchmark.h  BruteForce.h  Statistics.h
include/core/: Circle.h  Config.h  Particle.h  Rectangle.h
include/quadtree/: QuadNode.h  Quadtree.h
include/renderer/: Camera2D.h  DrawParticles.h  DrawQuadTree.h  Renderer.h  UI.h
include/simulation/: Collision.h  ParticleGenerator.h  Physics.h  Simulation.h
include/utils/: Logger.h  Random.h  Timer.h
src/: main.cpp
src/benchmark/: Benchmark.cpp  BruteForce.cpp  Statistics.cpp
src/core/: Circle.cpp  Config.cpp  Particle.cpp  Rectangle.cpp
src/quadtree/: QuadNode.cpp  QuadTree.cpp
src/renderer/: Camera2D.cpp  DrawParticles.cpp  DrawQuadTree.cpp  Renderer.cpp  UI.cpp
src/simulation/: Collision.cpp  ParticleGenerator.cpp  Physics.cpp  Simulation.cpp
src/utils/: Logger.cpp  Random.cpp  Timer.cpp
tests/: test_collision.cpp  test_framework.h  test_generator.cpp  test_quadtree.cpp
viz/: Renderer.cpp  Renderer.h
